soluzioni non consulenze

--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -84,7 +84,7 @@
 
 			 	  <div class='prtn-box prtn-box-3 prtn-box-center' data-bind='css: box_center_show'>
 			 	  	<div class="prtn-box-inner">
-				 	  	<h3>Servizi e consulenze</h3>
+				 	  	<h3>Servizi e Soluzioni</h3>
 				 	  	<div class='prtn-box-icon prtn-box-icon-companies'>
 				 	  	</div>
 				 	  	<div class='prtn-box-desc'>
@@ -179,7 +179,7 @@
 
           <li class='prtn-box col-sm-5 col-sm-offset-1'>
             <div class='prtn-box-inner'>
-              <h3>Servizi e consulenze</h3>
+              <h3>Servizi e Soluzioni</h3>
               <div class='prtn-box-icon'></div>
               <div class='prtn-box-desc'>
               Certifica la tua azienda con LPI, garantisci la qualità di servizi e consulenze, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale di LPI.
@@ -691,7 +691,7 @@
 
             <div data-bind='visible: type() == "service-company" && show'>
               <div class="row">
-              <h1>Servizi e consulenza</h1>
+              <h1>Servizi e Soluzioni</h1>
               <p>
               In questa sezione puoi trovare i nostri programmi di partnership dedicati alle aziende ed ai professionisti che erogano servizi in ambiente Linux ed Open Source.<br />
               Attraverso i programmi LPI SP (Solution Provider), LPI CSP (Certified Solution Provider) e LPI CSP (Certified Solution Provider) Gold puoi essere trovato da nuovi clienti in base ai servizi che offri ed alle tue effetive competenze.
