--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -744,8 +744,8 @@
                     LPI SP (Service Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br>
                     </div>
                     <ul class='prtn-box-bonus-list'>
-                        <li>Certifizazione LPIC-1</li>
                         <li>Disponibilita' utilizzo logo LPI</li>
+                        <li>Posizionamento nel portale LPI</li>
                     </ul>
                     </p>
                     <div class='prtn-box-button-cont'>
@@ -770,7 +770,7 @@
                       
                     </div>
                       <ul class='prtn-box-bonus-list'>
-                        <li>Certifizazione LPIC-1</li>
+                        <li>Certificazione LPIC-1</li>
                         <li>Disponibilita' utilizzo logo LPI</li>
                         <li>Posizionamento nel portale LPI</li>
                         <li>Banner su lpi-italia.org</li>
@@ -800,7 +800,7 @@
                       </p>
                     </div>
                       <ul class='prtn-box-bonus-list'>
-                        <li>Certifizazione LPIC-1</li>
+                        <li>Certificazione LPIC-1</li>
                         <li>Disponibilita' utilizzo logo LPI</li>
                         <li>Posizionamento nel portale LPI</li>
                         <li>Banner su lpi-italia.org</li>
